<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/editCondiment"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/condimentNameHint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_margin="16dp">

            <com.croccio.gesty.view.base.ClickToSelectEditText
                android:id="@+id/selectCategoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/categoryCondimentHint"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/addCategoryButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/colorAccent" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/priceToAddEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priceToAddCondimentHint"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/priceToRemoveEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priceToRemoveCondimentHint"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:gravity="end|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/okButton"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>