<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/createNewCondimentButton"
        android:layout_toStartOf="@id/createNewCondimentButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fakeActionBar"
            android:elevation="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header_bg" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="32dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:src="@android:drawable/ic_menu_save" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    android:textColorHint="#ffffff">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/condimentNameHint"
                        android:inputType="text"
                        android:textColor="#ffffff" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.1">

                    <com.croccio.gesty.view.base.ClickToSelectEditText
                        android:id="@+id/selectCategoryEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/categoryCondimentHint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/addCategoryButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/ic_input_add"
                    android:tint="@color/colorAccent" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/priceToAddEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priceToAddCondimentHint"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/priceToRemoveEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priceToRemoveCondimentHint"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createNewCondimentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/topBarFABMiddle" />
</RelativeLayout>